Output written on dyplom.pdf (19 pages, 152079 bytes).

--- a/settings.tex
+++ b/settings.tex
@@ -45,7 +45,7 @@
       \leavevmode \bfseries
       \advance\leftskip\@tempdima
       \hskip -\leftskip
-      #1\nobreak\
+      #1\nobreak\ 
       \leaders\hbox{$\m@th\mkern \@dotsep mu\hbox{.}\mkern \@dotsep mu$}
      \hfil \nobreak\hb@xt@\@pnumwidth{\hss #2}\par
     \endgroup
@@ -55,7 +55,7 @@
 
 
 \setlength{\parskip}{6mm}
-\frenchspacing %normalne odstępy w tekscie
+\frenchspacing %normalne odstępy w tekscie 
 \setlength{\parskip}{3pt} %odstęp między akapitami
 \setlength{\parindent}{28pt}
 \linespread{1.15} %interlinia
@@ -93,6 +93,12 @@
 \defcitealias{swatman}{\cite{swatman} Swatman: Electronic Commerce: Origins and Future Directions, 1996}
 \defcitealias{kaushik}{\cite{kaushik} Kaushik: History of E-Commerce, 2010}
 \defcitealias{census}{\cite{census} QUARTERLY RETAIL E-COMMERCE SALES 4th QUARTER 2008}
+\defcitealias{helander}{\cite{helander} Helander: Modeling the customer in electronic commerce, 2000}
+\defcitealias{spiller}{\cite{spiller} Spiller: A classification of internet retail stores, 1997}
+\defcitealias{bellman}{\cite{bellman} Bellman: Predictors of online buying behavior, 1999}
+\defcitealias{keeney}{\cite{keeney} Keeney: The value of Interncet commerce to the customer, 1999}
+\defcitealias{yoo}{\cite{yoo} Yoo: Experiment on the effectiveness of link structure for convenient cybershopping, 2000}
+\defcitealias{kim}{\cite{kim} Kim: Critical design factors for successful e-commerce systems, 2002}
 
 \def\literatura{
   \section{LITERATURA}
@@ -102,27 +108,33 @@
     \begin{thebibliography}{5}
     \bibitem{alsomali} Al-Somali, S., Gholami, R. and Clegg, B.: An investigation into the acceptance of online banking in Saudi Arabia, Technovation, wydanie 29, nr 2, 2009
     \bibitem{alreck_settle} Alreck, P. and Settle, R. B.: Gender Effects on Internet, Catalogue and Store Shopping, Journal of Database Marketing, wydanie 9, nr 2, strony 150-162, 2002
+    \bibitem{bellman} Bellman S., Lohse G. L., Johnson E. J.: Predictors of online buying behavior, Communications of ACM, wydanie 42, str. 32-38, 1999
     \bibitem{eurostat} Eurostat, Internet usage in 2009 – households and individuals, 2009
     \bibitem{garbarino} Garbarino, E. and Strabilevitz, M.: Gender Differences in the Perceived Risk of Buying Online and the Effects of Receiving a Site Recommendation, Journal of Business Research wydanie 57, str. 768-775, 2004
-    \bibitem{gate} Gate R., Nacamuli A.: Electronic Funds Transfer, The Internet Encyclopedia, 2004
+    \bibitem{gate} Gate R., Nacamuli A.: Electronic Funds Transfer, The Internet Encyclopedia, 2004 
+    \bibitem{helander} Helander M. G., Khalid H. M.: Modeling the customer in electronic commerce. Applied Ergonomics wydanie 31, str. 609-619, 2000
     \bibitem{joines} Joines, J., Scherer, C. and Scheufele, D.: Exploring Motivations for Consumer Web Use and Their Implications for E-Commerce, Journal of Consumer Marketing wydanie 20, nr 2, str. 90-109, 2003
     \bibitem{kantor} Kantor M., Burrows J. H.: Electronic Data Interchange (EDI), National Institute of Standards and Technology, 1996
     \bibitem{kaushik} Kaushik P.: History of E-Commerce, 2010
+    \bibitem{keeney} Keeney R. L.: The value of Internet commerce to the customer, Management Science, wydanie 45, str. 533-542, 1999
+    \bibitem{kim} Kim J., Lee J.:Critical design factors for successful e-commerce systems, Behaviour and Information Technology, wydanie 21, str. 185-199, 2002
     \bibitem{li} Li, H., Kuo, C. and Russell, M. G.: The Impact of Perceived Channel Utilities, Shopping Orientations, and Demographics on the Consumer's Online Buying Behavior, Journal of Computer-Mediated Communication, wydanie 5, nr 2, 1999
     \bibitem{lu} Lu, J., Yu, C.S., Liu, C. and Yao, J.: Technology acceptance model for wireless internet, Internet Research: Electronic Networking Applications and Policy, wydanie 13 nr 3, str. 206-22, 2003
     \bibitem{lynch} Lynch, P. D., Kent, R. J. and Srinivasan, S. S.: The Global Internet Shopper: Evidence From Shopping Tasks in Twelve Countries, Journal of Advertising Research wydanie 41, nr 3, str. 15-23, 2001
     \bibitem{mahmood} Mahmood, M. A., Bagchi, K. and Ford, T. C.: On-Line Shopping Behavior: Cross-Country Empirical Research, International Journal of Electronic Commerce, rocznik 9, nr 1, str. 9-30, 2004
     \bibitem{park_2004} Park, J., Lee, D. and Ahn, J.: Risk-Focused E-Commerce Adoption Model: a Cross-Country Study, Journal of Global Information Management wydanie 7, str. 6-30, 2004
     \bibitem{census} QUARTERLY RETAIL E-COMMERCE SALES 4th QUARTER 2008, http://www.census.gov/mrts/www/data/html/08Q4.html, dostęp 17.09.2011
-    \bibitem{shin} Shin, D.H. : Towards an understanding of the consumer acceptance of mobile wallet,
+    \bibitem{shin} Shin, D.H.: Towards an understanding of the consumer acceptance of mobile wallet,
 Computers in Human Behavior, wydanie 25, nr 6, str. 1343-54, 2009
     \bibitem{slyke} Slyke, C. V., Comunale, C. L. and Belanger, F.: Gender Differences in Perceptions of Web-Based Shopping, Communications of the ACM wydanie 45, nr 7, str. 82-86, 2002
+    \bibitem{spiller} Spiller P., Lohse G. L.: A classification of internet retail stores. International Journal of Electronic Commerce, wydanie 2, str. 29-56, 1997
     \bibitem{stafford} Stafford, T. F., Turan, A. and Raisinghani, M. S.: International and Cross-Cultural Influences on Online Shopping Behavior, Journal of Global Information Management, wydanie 7, nr 2, str. 70-87, 2004
     \bibitem{susskind} Susskind, A.:Electronic Commerce and World Wide Web Apprehensiveness: An Examination of Consumers' Perceptions of the World Wide Web, Journal of Computer-Mediated Communication, rocznik 9, nr 3, 2004
     \bibitem{swatman} Swatman, P.M.C.: Electronic Commerce: Origins and Future Directions, 1st
 Australian DAMA Conference, Melbourne, Victoria, 1996
     \bibitem{wee_ramacha} Wee, K. N. L. and Ramachandra, R.: Cyberbuying in China, Hong Kong and Singapore: Tracking the Who, Where, Why and What Online Buying, International Journal of Retail \& Distribution Management wydanie 28, nr 7, str. 307-316, 2000
     \bibitem{xia} Xia, L.: Affect As Information: the Role of Affect in Consumer Online Behaviors, Advances in Consumer Research wydanie 29, nr 1, str. 93-100, 2002
+    \bibitem{yoo} Yoo B., Kim J.: Experiment on the effectiveness of link structure for convenient cybershopping, Journal of Organizational Computing and Electronic Commerce, wydanie 10, str. 241-256, 2000
 
   \end{thebibliography}
   %\renewcommand*{\refname}{}
