--- a/00_settings.tex
+++ b/00_settings.tex
@@ -9,7 +9,7 @@
 \usepackage{polski}
 %czcionki
 \usepackage{times} %Times new Romanpa
-\usepackage[scaled]{uarial}
+%\usepackage[scaled]{uarial}
 %obsługa pdfa
 \usepackage[pdftex,usenames,dvipsnames]{color}      %Obsługa kolorów. Opcje usenames i dvipsnames wprowadzają 
 %bibliografia
@@ -19,7 +19,7 @@
 %grafika i geometria strony
 \usepackage{extsizes} %Dostepne inne rozmiary czcionek, np. 14 w poleceniu: \documentclass[14pt]{article}.
 \usepackage[final]{graphicx}
-\graphicspath{{./img/}}
+\graphicspath{{img/}}
 %inne
 \usepackage{expdlist}    %Zmienia definicję środowiska description, daje większe możliwości wpływu na wygląd listy.
 \usepackage{flafter}     %Wprowadza parametr [tb] do polecenia \suppressfloats[t] (polecenie to powoduje nie umieszczanie rysunkow, tabel itp. na stronach, na ktorych jest to polecenie (np. moze byc to stroma z tytulem rozdzialu, ktory chcemy zeby byl u samej gory, a nie np. pod rysunkiem)).
@@ -66,6 +66,9 @@
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot[LE,RO]{\thepage}
+
+\renewcommand{\rmdefault}{phv} % Arial
+\renewcommand{\sfdefault}{phv} % Arial
 
 %%sekcje
 \sectionfont{\Large\MakeUppercase}
