--- a/00_settings.tex
+++ b/00_settings.tex
@@ -110,6 +110,15 @@
 \defcitealias{cappel}{\cite{cappel} Cappel: World Wide Web uses for electronic commerce: Toward a classification scheme, 1996}
 \defcitealias{gregor}{\cite{gregor} Gregor: e-Commerce, 2002}
 \defcitealias{global_trends}{\cite{global_trends} Global Trends in Online Shopping, 2010}
+\defcitealias{constantinades}{\cite{constantinades} Influencing the online consumer's behavior: the Web experience, 2004}
+\defcitealias{nielsen} {\cite{nielsen} Nielsen et al.: E-Commerce user experience, 2001}
+\defcitealias{pitkow_kehoe} {\cite{pitkow_kehoe} Pitkow: Emerging trends in the www user population, 1996}
+\defcitealias{katz_aspen} {\cite{katz_aspen} Katz: Motives, hurdles and dropouts. Who is on the Internet and why?, 1997}
+\defcitealias{manhartsberger} {\cite{manhartsberger} Manhartsberger: Web Usability: Das Prinzip des Vertrauens, 2001}
+\defcitealias{gamification} {\cite{gamification} Wikipedia: Gamification}
+\defcitealias{zichermann} {\cite{zichermann} Zichermann: Game Based Marketing, 2010}
+\defcitealias{harris} {\cite{harris} Harris: Privacy leadership initiative, 2001}
+\defcitealias{grabner} {\cite{grabner} Grabner-Kräuter: Empirical research in online trust: a review and critical assessment, 2003}
 
 \def\literatura{
   \section{LITERATURA}
@@ -121,15 +130,20 @@
     \bibitem{alreck_settle} Alreck, P. and Settle, R. B.: Gender Effects on Internet, Catalogue and Store Shopping, Journal of Database Marketing, wydanie 9, nr 2, strony 150-162, 2002
     \bibitem{bellman} Bellman S., Lohse G. L., Johnson E. J.: Predictors of online buying behavior, Communications of ACM, wydanie 42, str. 32-38, 1999
     \bibitem{cappel} Cappel J. J. i Myerscough M. A.: World Wide Web uses for electronic commerce: Toward a classification scheme, 1996
+    \bibitem{constantinades} Constantinades E.: Influencing the online consumer's behavior: the Web experience, Internet Research, wydanie 14, nr 2, str. 111-126, 2004
     \bibitem{eurostat} Eurostat, Internet usage in 2009 – households and individuals, 2009
+    \bibitem{gamification} Wikipedia, Gamification, http://en.wikipedia.org/wiki/Gamification, dostęp 06.01.2012
     \bibitem{garbarino} Garbarino, E. and Strabilevitz, M.: Gender Differences in the Perceived Risk of Buying Online and the Effects of Receiving a Site Recommendation, Journal of Business Research wydanie 57, str. 768-775, 2004
     \bibitem{gate} Gate R., Nacamuli A.: Electronic Funds Transfer, The Internet Encyclopedia, 2004 
     \bibitem{global_trends} Global Trends in Online Shopping, A Nielsen Global Consumer Report, June 2010
+    \bibitem{grabner} Grabner-Kräuter S., Kaluscha A.E.: Empirical research in online trust: a review and critical assessment, International Journal of Human-Computer Studies, wydanie 58, nr 6, str. 783-812, 2003
     \bibitem{gregor} Gregor B., Stawiszyński M.: e-Commerce, 2002
+    \bibitem{harris} Harris Interactive: Privacy leadership initiative, 2001
     \bibitem{helander} Helander M. G., Khalid H. M.: Modeling the customer in electronic commerce. Applied Ergonomics wydanie 31, str. 609-619, 2000
     \bibitem{hoffman} Hoffman D. L., Novak T. P. i Chatterjee P.: Commercial Scernarios for the Web: Opportunities and challenges. Journal of Computer-Mediated Communication, Special Issue on Electronic Commerce, str. 1-3, 1996
     \bibitem{joines} Joines, J., Scherer, C. and Scheufele, D.: Exploring Motivations for Consumer Web Use and Their Implications for E-Commerce, Journal of Consumer Marketing wydanie 20, nr 2, str. 90-109, 2003
     \bibitem{kantor} Kantor M., Burrows J. H.: Electronic Data Interchange (EDI), National Institute of Standards and Technology, 1996
+    \bibitem{katz_aspen} Katz J., Aspen P.: Motives, hurdles and dropouts. Who is on the Internet and why? Communications of the ACM, wydanie 40, str. 97-102, 1997
     \bibitem{kaushik} Kaushik P.: History of E-Commerce, 2010
     \bibitem{keeney} Keeney R. L.: The value of Internet commerce to the customer, Management Science, wydanie 45, str. 533-542, 1999
     \bibitem{kim} Kim J., Lee J.:Critical design factors for successful e-commerce systems, Behaviour and Information Technology, wydanie 21, str. 185-199, 2002
@@ -137,8 +151,11 @@
     \bibitem{lu} Lu, J., Yu, C.S., Liu, C. and Yao, J.: Technology acceptance model for wireless internet, Internet Research: Electronic Networking Applications and Policy, wydanie 13 nr 3, str. 206-22, 2003
     \bibitem{lynch} Lynch, P. D., Kent, R. J. and Srinivasan, S. S.: The Global Internet Shopper: Evidence From Shopping Tasks in Twelve Countries, Journal of Advertising Research wydanie 41, nr 3, str. 15-23, 2001
     \bibitem{mahmood} Mahmood, M. A., Bagchi, K. and Ford, T. C.: On-Line Shopping Behavior: Cross-Country Empirical Research, International Journal of Electronic Commerce, rocznik 9, nr 1, str. 9-30, 2004
+    \bibitem{manhartsberger} Manhartsberger M., Musil S.: Web Usability: Das Prinzip des Vertrauens, Galileo Press, Bonn, 2001
+    \bibitem{nielsen} Nielsen J., Molich R., Snyder C., Farrel S.: E-Commerce user experience, Fremont, CA: Nielsen Norman Group, 2001
     \bibitem{park_2004} Park, J., Lee, D. and Ahn, J.: Risk-Focused E-Commerce Adoption Model: a Cross-Country Study, Journal of Global Information Management wydanie 7, str. 6-30, 2004
     \bibitem{census} QUARTERLY RETAIL E-COMMERCE SALES 4th QUARTER 2008, http://www.census.gov/mrts/www/data/html/08Q4.html, dostęp 17.09.2011
+    \bibitem{pitkow_kehoe} Pitkow J.E., Kehoe C.M.: Emerging trends in the www user population . Communications of the ACM, wydanie 39, str. 106-108, C.M. 1996
     \bibitem{shin} Shin, D.H.: Towards an understanding of the consumer acceptance of mobile wallet,
 Computers in Human Behavior, wydanie 25, nr 6, str. 1343-54, 2009
     \bibitem{slyke} Slyke, C. V., Comunale, C. L. and Belanger, F.: Gender Differences in Perceptions of Web-Based Shopping, Communications of the ACM wydanie 45, nr 7, str. 82-86, 2002
@@ -150,6 +167,7 @@ Australian DAMA Conference, Melbourne, Victoria, 1996
     \bibitem{wee_ramacha} Wee, K. N. L. and Ramachandra, R.: Cyberbuying in China, Hong Kong and Singapore: Tracking the Who, Where, Why and What Online Buying, International Journal of Retail \& Distribution Management wydanie 28, nr 7, str. 307-316, 2000
     \bibitem{xia} Xia, L.: Affect As Information: the Role of Affect in Consumer Online Behaviors, Advances in Consumer Research wydanie 29, nr 1, str. 93-100, 2002
     \bibitem{yoo} Yoo B., Kim J.: Experiment on the effectiveness of link structure for convenient cybershopping, Journal of Organizational Computing and Electronic Commerce, wydanie 10, str. 241-256, 2000
+    \bibitem{zichermann} Zichermann G., Linder J.: Game-based marketing: inspire customer loyalty through re-wards, challenges, and contests, Wiley, 2010
 
   \end{thebibliography}
   %\renewcommand*{\refname}{}
