--- a/05.tex
+++ b/05.tex
@@ -1,26 +1,3 @@
-\section{PROJEKT SYSTEMU}
-
-\subsection{Analiza procesów (diagramy)}
-
-
-\subsection{Specyfikacja i analiza funkcji realizowanych przez system}
-
-
-\subsection{Projekt bazy danych}
-
-
-\subsection{Projekt aplikacji (interfejsu użytkownika, procedur przetwarzania danych)}
-
-
-\subsection{Projekt zabezpieczeń (elementy polityki bezpieczeństwa, użytkownicy, prawa dostępu, wymagania specjalne)}
-
-
-\subsection{Projekt techniczny}
-
-
-\subsection{Projekt wdrożenia (implementacja systemu, konwersja danych, szkolenia użytkowników)}
-
-
-\subsection{Uwagi eksploatacyjne}
-
+\section{PODSUMOWANIE}
+ (wnioski, zakres korzystania wyników pracy, dalszy rozwój systemu)
 \newpage
