Draft version finally finished. Output written on 00_dyplom.pdf (82 pages, 2064662 bytes).

--- a/00_settings.tex
+++ b/00_settings.tex
@@ -219,7 +219,7 @@ Australian DAMA Conference, Melbourne, Victoria, 1996
     http://www.magentocommerce.com/blog/customer-feedback-with-kampyle-and-magento/,
     dostęp 01.04.2012}
     \bibitem{inzynieria} {Czerner D.: Inżynieria oprogramowania 2011, 
-    http://zasoby.open.agh.edu.pl/~10sdczerner/, dostęp 25.03.2012}
+    http://zasoby.open.agh.edu.pl/\textasciitilde10sdczerner/, dostęp 25.03.2012}
     \bibitem{gamification} {Gamification, http://en.wikipedia.org/wiki/Gamification, 
     dostęp 06.01.2012}
     \bibitem{ga} {Google Analytics for NetSuite, 
